# python-examdiff

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  EXAMDIFF.code-workspace  GITHUB_SETUP.md  LICENSE  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  REPOSITORY_READY.md  START_HERE.md  USAGE.md  config.py  examdiff.spec  examples.py  install.ps1  launcher.bat  main.py  pyproject.toml  requirements.txt  setup-github.ps1
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
core/: diff_engine.py  directory_handler.py  file_handler.py  myers_algorithm.py
docs/screenshots/: .gitkeep
gui/: file_select_dialog.py  main_window.py
plugins/: example_statistics.py  plugin_base.py
tests/: test_myers.py
utils/: helpers.py  report_generator.py  syntax_highlighter.py
